--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -40,7 +40,7 @@
 
   @media (max-width: $tablet) and (orientation: portrait) {
     max-width: 100%;
-    font-size: 3.6rem;
+    font-size: 3.5rem;
   }
 
   @media (max-width: $tablet) and (orientation: landscape) {
